[package]
name = "rurtle"
version = "0.1.0"
authors = ["Daniel <root@kingdread.de>"]

[lib]
name = "rurtle"
doc = true
path = "src/lib.rs"

[[bin]]
name = "rurtle"
doc = false

[features]
default = []
# Clippy only works with nightly Rust, so we optionally enable it
linted = ["clippy"]

[dependencies]
glium = "*"
glium_text = "*"
nalgebra = "*"
image = "*"
libc = "*"
bit-vec = "*"

[dependencies.clippy]
version = "*"
optional = true
