[package]
name = "rurtle"
version = "0.1.0"
authors = ["Daniel <root@kingdread.de>"]

[lib]
name = "rurtle"
doc = true
path = "src/lib.rs"

[[bin]]
name = "rurtle"
doc = false

[features]
default = []
# Clippy only works with nightly Rust, so we optionally enable it
linted = ["clippy"]

[dependencies]
glium = "0.13.5"
glium_text = "0.8.0"
nalgebra = "0.6.0"
image = "0.9.0"
libc = "0.2.10"
bit-vec = "0.4.3"

[dependencies.clippy]
version = "0.0.63"
optional = true
