[package]
name = "rurtle"
version = "0.1.0"
authors = ["Daniel <root@kingdread.de>"]

[lib]
name = "rurtle"
doc = true
path = "src/lib.rs"

[[bin]]
name = "rurtle"
doc = false

[features]
default = ["cli"]
# Clippy only works with nightly Rust, so we optionally enable it
linted = ["clippy"]
cli = []

[dependencies]
glium = "0.15.0"
glium_text = "0.10.0"
nalgebra = "0.10.1"
image = "0.10.0"
libc = "0.2.10"
bit-vec = "0.4.3"

[dependencies.clippy]
version = "0.0.90"
optional = true
